# SUPER-POLE-POSITION

./: .gitignore  AGENTS.md  BODY.md  CHANGELOG.md  CONTRIBUTING.md  DEBUG.md  GAMEPLAY_FAQ.md  GRAPHICS_FIDELITY_TASKS.md  MIND.md  PROGRESS_ARCADE_PARITY.md  README.md  ROADMAP.md  SCOREBOARD_ENDPOINTS.md  SOUL.md  ai_controllers.py  config.arcade_parity.yaml  convert_models_to_sprites.py  main.py  mypy.ini  pole_position_env.py  press_start.py  pyproject.toml  requirements-ci.txt  requirements.txt  run_game.py  setup.cfg  track.py
benchmarks/: README.md  baseline_engine_pitch.txt  baseline_puddle.txt
config/: default.yaml  release.yaml
docker/: Dockerfile.playtest  Dockerfile.runtime
docs/: GAME_FLOW.md  SPRITES.md  arcade_parity_matrix.md  ci_fail_matrix.md  parity_audit.md  playtest_guide.md  repo_health_matrix.md
examples/: animated_sprite.py  reset_high_scores.py
gymnasium/: __init__.py
scripts/: build_standalone.py
spp/: __init__.py  __main__.py  cli.py
src/: cli.py
super_pole_position/: __init__.py  __main__.py  ai_cpu.py  cli.py  config.py  log_utils.py  physics.py
tests/: baseline.txt  conftest.py  test_2600_mode.py  test_ai_integration.py  test_api_server.py  test_arcade_parity.py  test_ascii_sprites.py  test_attract_mode.py  test_audio_triggers.py  test_benchmark_logger.py  test_benchmark_logging.py  test_billboard_collision.py  test_car.py  test_carstate.py  test_cli_difficulty.py  test_cli_headless.py  test_cli_mute_bgm.py  test_cli_no_brake.py  test_cli_outro.py  test_cli_player_name.py  test_cli_render_skip.py  test_cli_smoke.py  test_cli_stub.py  test_cli_track_file.py  test_cpucar.py  test_crash_animation.py  test_curvilinear_coords.py  test_determinism.py  test_difficulty.py  test_disable_brake.py  test_docs.py  (+50 more)
(+77 files in other folders)
