[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-pole-position"
version = "0.1.0"
description = "Gymnasium environment for AI-driven Pole Position style racing."
readme = "README.md"
license = {text = "Unlicense"}
authors = [{name="System Operators"}]
requires-python = ">=3.8"
dependencies = [
    "gymnasium",
    "numpy",
    "pyyaml"
]

[project.optional-dependencies]
graphics = ["pygame"]
ai = ["torch", "transformers"]
dev = ["pytest", "pytest-cov", "coverage", "pytest-timeout"]

[project.scripts]
super-pole-position = "super_pole_position.cli:main"

[tool.setuptools.packages.find]
exclude = ["assets*"]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.pytest.ini_options]
timeout = 10
